# docs/swagger.json
@@ -4369,13 +4369,6 @@
                 "signer_reg_no"
             ],
             "properties": {
-                "right_type": {
-                    "type": "string",
-                    "enum": [
-                        "SOLE",
-                        "JOINT"
-                    ]
-                },
                 "role": {
                     "type": "string",
                     "maxLength": 100
